# aes-llm

./: .gitignore  calc_qwk.ipynb  few_shot.py  few_shot.sh  few_shot_qwk.ipynb  many_shot.ipynb  pyproject.toml  utils.py  vanilla_tokenrail.ipynb
llm_prompts/: few_shot_user.md  many_shot_system.md  many_shot_system_w_rubric.md  many_shot_user.md
llm_prompts/original_trait/overall/: Overall_7.md
